--- a/home.html
+++ b/home.html
@@ -112,30 +112,28 @@
     <div class="content_container">
       <div class="content_container page_grid contents">
         <div class="content_item">
-            <h2>Information</h2>
-          <p class="overall">Bonsai is an inspirational art-form with a rich history. So we have put together this section with galleries, movies, top 10's and Japanese Bonsai trees for you to enjoy. There's so much more to bonsais than what meets the eye! Explore the history of these ancient trees or how to care for one right here in the ultimate bonsai guide!
+            <h3>Information</h3>
+          <p class="content">Bonsai is an inspirational art-form with a rich history. So we have put together this section with galleries, movies, top 10's and Japanese Bonsai trees for you to enjoy. There's so much more to bonsais than what meets the eye! Explore the history of these ancient trees or how to care for one right here in the ultimate bonsai guide!
           </p>
-          <p class="overallblockquote">
-            Did you know that bonsai trees originated in China, NOT Japan?<br>
-            Or that they symbolize harmony and good luck in some cultures?<br>
-            Or that the oldest bonsai tree is over 1,000 years old?<br></p>
             <button class="information">
               <a href="information.html">Learn more</a>
             </button>
         </div>
         <div class="content_item">
-          <button>
-            <a href="FAQ.html">
-           <h3>Growing/cultivating</h3>
-         </a>
-          </button>
+          <h3>Information</h3>
+          <p class="content">Bonsai is an inspirational art-form with a rich history. So we have put together this section with galleries, movies, top 10's and Japanese Bonsai trees for you to enjoy. There's so much more to bonsais than what meets the eye! Explore the history of these ancient trees or how to care for one right here in the ultimate bonsai guide!
+          </p>
+            <button class="information">
+              <a href="information.html">Learn more</a>
+            </button>
         </div>
         <div class="content_item">
-          <button>
-            <a href="FAQ.html">
-           <h3>Styling</h3>
-         </a>
-          </button>
+          <h3>Information</h3>
+          <p class="content">Bonsai is an inspirational art-form with a rich history. So we have put together this section with galleries, movies, top 10's and Japanese Bonsai trees for you to enjoy. There's so much more to bonsais than what meets the eye! Explore the history of these ancient trees or how to care for one right here in the ultimate bonsai guide!
+          </p>
+            <button class="information">
+              <a href="information.html">Learn more</a>
+            </button>
         </div>
     </div>
     </div>
