--- a/home.html
+++ b/home.html
@@ -112,27 +112,25 @@
     <div class="content_container">
       <div class="content_container page_grid contents">
         <div class="content_item">
-            <h3>Information</h3>
-          <p class="content">Bonsai is an inspirational art-form with a rich history. So we have put together this section with galleries, movies, top 10's and Japanese Bonsai trees for you to enjoy. There's so much more to bonsais than what meets the eye! Explore the history of these ancient trees or how to care for one right here in the ultimate bonsai guide!
-          </p>
-            <button class="information">
+            <h3>Tree Age Calculator</h3>
+          <p class="content"></p>
+            <button class="content_information">
               <a href="information.html">Learn more</a>
             </button>
         </div>
         <div class="content_item">
           <h3>Information</h3>
-          <p class="content">Bonsai is an inspirational art-form with a rich history. So we have put together this section with galleries, movies, top 10's and Japanese Bonsai trees for you to enjoy. There's so much more to bonsais than what meets the eye! Explore the history of these ancient trees or how to care for one right here in the ultimate bonsai guide!
+          <p class="content">It can be very difficult to calculate the age of a tree if you don't know when it was planted. However, it is possible to estimate the tree's age through an approximation technique that is based on the circumference of its trunk.
           </p>
-            <button class="information">
-              <a href="information.html">Learn more</a>
+            <button class="content_information">
+              <a href="calculator.html">Learn more</a>
             </button>
         </div>
         <div class="content_item">
           <h3>Information</h3>
-          <p class="content">Bonsai is an inspirational art-form with a rich history. So we have put together this section with galleries, movies, top 10's and Japanese Bonsai trees for you to enjoy. There's so much more to bonsais than what meets the eye! Explore the history of these ancient trees or how to care for one right here in the ultimate bonsai guide!
-          </p>
-            <button class="information">
-              <a href="information.html">Learn more</a>
+          <p class="content">Want to know more about bonsai? Contact us for more information!</p>
+            <button class="content_information">
+              <a href="contactus.html">Learn more</a>
             </button>
         </div>
     </div>
