--- a/home.html
+++ b/home.html
@@ -113,24 +113,23 @@
       <div class="content_container page_grid contents">
         <div class="content_item">
             <h3>Tree Age Calculator</h3>
-          <p class="content"></p>
+          <p class="content">Appreciate the age of the tree now through our tree age calculator</p>
             <button class="content_information">
-              <a href="information.html">Learn more</a>
+              <a href="calculator.html">Calculator</a>
             </button>
         </div>
         <div class="content_item">
           <h3>Information</h3>
-          <p class="content">It can be very difficult to calculate the age of a tree if you don't know when it was planted. However, it is possible to estimate the tree's age through an approximation technique that is based on the circumference of its trunk.
-          </p>
+          <p class="content"></p>
             <button class="content_information">
               <a href="calculator.html">Learn more</a>
             </button>
         </div>
         <div class="content_item">
-          <h3>Information</h3>
+          <h3>Contact</h3>
           <p class="content">Want to know more about bonsai? Contact us for more information!</p>
             <button class="content_information">
-              <a href="contactus.html">Learn more</a>
+              <a href="contactus.html">Contact</a>
             </button>
         </div>
     </div>
