--- a/home.html
+++ b/home.html
@@ -113,7 +113,7 @@
       <div class="content_container page_grid contents">
         <div class="content_item">
             <h3>Tree Age Calculator</h3>
-          <p class="content">Appreciate the age of the tree now through our tree age calculator</p>
+          <p class="content">Appreciate the age of the tree now through our tree age calculator!</p>
             <button class="content_information">
               <a href="calculator.html">Calculator</a>
             </button>
