--- a/contactus.html
+++ b/contactus.html
@@ -26,6 +26,7 @@
           <li style="float: left;"><img class="logo" src="images/logo.png"><span><a class="logo" href="home.html">Bonsai</a></span></li>
           <li><a href="information.html">INFORMATION</a></li>
           <li><a href="FAQ.html">FAQ</a></li>
+          <li><a href="calculator.html">CALCULATOR</a></li>
           <li><a href="contactus.html">CONTACT US</a></li>
           <li></li>
           <li></li>
