--- a/information.html
+++ b/information.html
@@ -27,6 +27,7 @@
             href="home.html">Bonsai</a></span></li>
           <li><a href="information.html">INFORMATION</a></li>
           <li><a href="FAQ.html">FAQ</a></li>
+          <li><a href="calculator.html">CALCULATOR</a></li>
           <li><a href="contactus.html">CONTACT US</a></li>
           <li></li>
           <li></li>
