--- a/calculator.html
+++ b/calculator.html
@@ -39,8 +39,9 @@
 
   <div class="stripe introduction">
     <div class="content_container">
-    <h1><b>Contact Us</b></h1><br>
-    <h2>Fill the form to add a new bonsai tree to our website</h2>
+    <h1><b>Tree Age Calculator</b></h1><br>
+    <h2>It can be very difficult to calculate the age of a tree if you don't know when it was planted. However, it is possible to estimate the tree's age through an approximation technique that is based on the circumference of its trunk.
+     </h2>
   </div>
   </div>
 
