--- a/calculator.html
+++ b/calculator.html
@@ -48,7 +48,10 @@
 <main>
  <!-- form input -->
     <div class="form-container";>
-        <h1>Submission Form</h1>
+        <h1>Appreciate the age of the tree.
+
+
+          Please select the tree type and specify the stem circumference / diameter in cm or inch. The stem circumference is measured at a height of 1.00 m (3.3 ft.) to 1.50 m (4.5 ft.).</h1>
         <form>
           <label for="name">Name:</label>
           <input type="text1" id="name" name="name" required>
