--- a/calculator.html
+++ b/calculator.html
@@ -166,7 +166,7 @@ document.write("<table><tr><th>Month</th><th>Balance</th><th>Interest</th><th>Pr
         <h3>Appreciate the age of the tree. Please select the tree type and specify the stem circumference / diameter in cm or inch. The stem circumference is measured at a height of 1.00 m (3.3 ft.) to 1.50 m (4.5 ft.).</h1>
         <form>
             <label for="amount"><b>Mortage amount</b></label>
-            <input type="text" id="amount" />
+            <input type="text1" id="amount" />
             <br />
             <label for="terms"><b>Terms in months</b></label>
             <select id="terms">
