--- a/calculator.html
+++ b/calculator.html
@@ -179,7 +179,7 @@ document.write("<table><tr><th>Month</th><th>Balance</th><th>Interest</th><th>Pr
             </select>
             <br />
             <label for="interest"><b>Interest rate per year</b></label>
-            <input type="text" id="interest" />
+            <input type="text2" id="interest" />
             <br />
             <input type="button" value="Calculate" onclick="getValues()" />		
         </form>
