--- a/calculator.html
+++ b/calculator.html
@@ -75,7 +75,7 @@
           <input type="textform" id="circumference" />
           <br />
           <label for="total">Total:</label>
-          <textarea id="total" disabled ></textarea>
+          <input type="textform" id="total" disabled />
           <br />
           <input type="button" id="calculate" value="Calculate"/>		
         </form>
