--- a/calculator.html
+++ b/calculator.html
@@ -18,14 +18,14 @@
   <script src="java.js" defer ></script>
   <meta name="theme-color" content="#fafafa">
   <script>
-  let calculate = function () {
+  let calculateDbh = function () {
     var diameter = parseFloat(document.getElementById("circumference").value/3.141592);
     var growth_factor = parseFloat(document.getElementById("type").value);
     let result = diameter * growth_factor; 
         document.getElementById("total").value = results;
         }
     window.onload = function () {
-      document.getElementById("calculate").onclick = calculate;
+      document.getElementById("calculate").onclick = calculateDbh;
         }   
    </script>
 </head>
