--- a/calculator.html
+++ b/calculator.html
@@ -22,7 +22,7 @@
     var diameter = parseFloat(document.getElementById("circumference").value/3.141592);
     var growth_factor = parseFloat(document.getElementById("type").value);
     let result = diameter * growth_factor; 
-        document.getElementById("total").value = results;
+        document.getElementById("total").value = result;
         }
     window.onload = function () {
       document.getElementById("calculate").onclick = calculateDbh;
