--- a/calculator.html
+++ b/calculator.html
@@ -74,7 +74,7 @@
           <label for="amount"><b>Circumference at Breast Height (CBH) in inch</b></label>
           <input type="textform" id="circumference" />
           <br />
-          <label for="total">Total:</label>
+          <label for="total">Result:</label>
           <input type="textform" id="total" disabled />
           <br />
           <input type="button" id="calculate" value="Calculate"/>		
@@ -99,30 +99,6 @@
       </p>
     </div>
   </footer>
-
-<script>
-        function handleSubmit(event) {
-        event.preventDefault();
-        const nameInput = document.getElementById('name');
-        const emailInput = document.getElementById('email');
-        const bonsaiNameInput = document.getElementById('bonsai-name');
-        const descriptionInput = document.getElementById('description');
-        const resourceInput = document.getElementById('resource');
-        const name = nameInput.value;
-        const email = emailInput.value;
-        const bonsaiName = bonsaiNameInput.value;
-        const description = descriptionInput.value;
-        const resource = resourceInput.value;
-        const formData = { name, email, bonsaiName, description, resource };
-      }
-
-      // Display HTML message
-      let form = document.getElementsByTagName("form")[0]; form.addEventListener("submit", (e) => {
-        e.preventDefault();
-        alert("Thank you for submitting! We will review your request shortly.");
-      });
-  </script>
-
 </body>
 
 </html>
