--- a/calculator.html
+++ b/calculator.html
@@ -67,8 +67,8 @@
               <option value="4.4">American Hornbeam</option>
               <option value="3.4">Apple-tree</option>
               <option value="4.2">Ash</option>
-              <option value="60">60 Months</option>
-              <option value="72">72 Months</option>
+              <option value="4.6">Beech</option>
+              <option value="3.0">Birch</option>
             </select>
             <br />  
           <label for="amount"><b>Circumference at Breast Height (CBH) in inch</b></label>
