--- a/calculator.html
+++ b/calculator.html
@@ -22,7 +22,7 @@
     var diameter = parseInt(document.getElementById("circumference").value/3.141592);
     var growth_factor = parseFloat(document.getElementById("type").value);
     let result = diameter * growth_factor; 
-        document.getElementById("total").value = result;
+        document.getElementById("total").value = "The estimated age is" + result + " years old.";
         }
     window.onload = function () {
       document.getElementById("calculate").onclick = calculateDbh;
