--- a/calculator.html
+++ b/calculator.html
@@ -67,8 +67,36 @@
               <option value="4.4">American Hornbeam</option>
               <option value="3.4">Apple-tree</option>
               <option value="4.2">Ash</option>
-              <option value="4.6">Beech</option>
+              <option value="4.7">Beech</option>
               <option value="3.0">Birch</option>
+              <option value="3.6">Black Locust</option>
+              <option value="3.7">Cedar</option>
+              <option value="3.4">Cherry</option>
+              <option value="3.7">Cypress</option>
+              <option value="1.6">Douglas</option>
+              <option value="5.0">Elm</option>
+              <option value="4.0">European Chestnut</option>
+              <option value="4.5">European Mountain Ash, Rowan</option>
+              <option value="3.6">Fir</option>
+              <option value="1.0">Giant Redwood, Sequoia</option>
+              <option value="4.6">Horsechestnut, Buckeye</option>
+              <option value="3.9">Larch</option>
+              <option value="5.5">Lime</option>
+              <option value="4.2">Maidenhair Tree, Ginkgo</option>
+              <option value="4.9">Maple, Field-Maple</option>
+              <option value="6.3">Oak</option>
+              <option value="5.8">Oak - Northern Red Oak</option>
+              <option value="4.2">Pear</option>
+              <option value="4.1">Pine</option>
+              <option value="3.3">Plane Tree</option>
+              <option value="3.6">Popplar</option>
+              <option value="4.5">Service Tree</option>
+              <option value="2.4">Spurce</option>
+              <option value="4.5">Swedish Whitebeam</option>
+              <option value="3.6">Tree Of Life - Thuja</option>
+              <option value="3.9">Walnut</option>
+              <option value="2.9">Willow</option>
+              <option value="11.2">Yew, Common Yew</option>
             </select>
             <br />  
           <label for="amount"><b>Circumference at Breast Height (CBH) in inch</b></label>
