--- a/contactus.html
+++ b/contactus.html
@@ -27,6 +27,7 @@
           <li><a href="information.html">INFORMATION</a></li>
           <li><a href="FAQ.html">FAQ</a></li>
           <li><a href="calculator.html">CALCULATOR</a></li>
+          <li><a href="gallery.html">GALLERY</a></li>
           <li><a href="contactus.html">CONTACT US</a></li>
           <li></li>
           <li></li>
