--- a/home.html
+++ b/home.html
@@ -28,6 +28,7 @@
           <li><a href="FAQ.html">FAQ</a></li>
           <li><a href="gallery.html">CONTACT US</a></li>
           <li><a href="calculator.html">CALCULATOR</a></li>
+          <li><a href="gallery.html">GALLERY</a></li>
           <li><a href="contactus.html">CONTACT US</a></li>
           <li></li>
           <li></li>
