--- a/gallery.html
+++ b/gallery.html
@@ -45,6 +45,8 @@
           <li style="float: left;"><img class="logo" src="images/logo.png"><span><a class="logo" href="home.html">Bonsai</a></span></li>
           <li><a href="information.html">INFORMATION</a></li>
           <li><a href="FAQ.html">FAQ</a></li>
+          <li><a href="calculator.html">CALCULATOR</a></li>
+          <li><a href="gallery.html">GALLERY</a></li>
           <li><a href="contactus.html">CONTACT US</a></li>
           <li></li>
           <li></li>
