--- a/gallery.html
+++ b/gallery.html
@@ -60,22 +60,22 @@
 <section id="gallery">
   <h1>Gallery</h1>
     <ul id="image_list">
-        <li><a href="images/image1.jpg"  title="Grilled Kind Crab Leg" id="first_link">
-          <img src="thumbnails/image1.jpg" width =60px height=40px alt=""></a></li>
-        <li><a href="images/image2.jpg" title="Udon">
-          <img src="thumbnails/image2.jpg" width =60px height=40px alt=""></a></li>
-        <li><a href="images/image3.jpg" title="Grilled Octopus Salad">
-          <img src="thumbnails/image3.jpg" width =60px height=40px alt=""></a></li>
-        <li><a href="images/image4.jpg" title="UNI Mini Tacos">
-          <img src="thumbnails/image4.jpg" width =60px height=40px alt=""></a></li>
-        <li><a href="images/image5.jpg" title="Tempura Set">
-          <img src="thumbnails/image5.jpg" width =60px height=40px alt=""></a></li>
-        <li><a href="images/image6.jpg" title="Kobe Beef">
-          <img src="thumbnails/image6.jpg" width =60px height=40px alt=""></a></li>
-          <li><a href="images/image7.jpg" title="Filet Mignon">
-          <img src="thumbnails/image7.jpg" width =60px height=40px alt=""></a></li>
+        <li><a href="images/bonsai-gallery-1.png"  title="Ficus Bonsai" id="first_link">
+          <img src="thumbnails/bonsai-gallery-1.png" width =60px height=40px alt=""></a></li>
+        <li><a href="images/bonsai-gallery-2.png" title="Japanese Maple Trees">
+          <img src="thumbnails/bonsai-gallery-2.png" width =60px height=40px alt=""></a></li>
+        <li><a href="images/bonsai-gallery-3.png" title="Chinese Elm">
+          <img src="thumbnails/bonsai-gallery-3.png" width =60px height=40px alt=""></a></li>
+        <li><a href="images/bonsai-gallery-4.png" title="Satsuki Azalea">
+          <img src="thumbnails/bonsai-gallery-4.png" width =60px height=40px alt=""></a></li>
+        <li><a href="images/bonsai-gallery-5.png" title="Birch Bonsai Trees">
+          <img src="thumbnails/bonsai-gallery-5.png" width =60px height=40px alt=""></a></li>
+        <li><a href="images/bonsai-gallery-6.png" title="Juniper Bonsai">
+          <img src="thumbnails/bonsai-gallery-6.png" width =60px height=40px alt=""></a></li>
+          <li><a href="images/bonsai-gallery-7.png" title="Pine Bonsai Trees">
+          <img src="thumbnails/bonsai-gallery-7.png" width =60px height=40px alt=""></a></li>
     </ul>
-    <h2 id="caption">Popular Menu</h2>         
+    <h2 id="caption">Different Types Of Bonsai</h2>         
     <p><img src="images/image1.jpg" width =500px height=300px alt="" id="image"></p>
 </section>	
    
