--- a/gallery.html
+++ b/gallery.html
@@ -61,19 +61,19 @@
   <h1>Gallery</h1>
     <ul id="image_list">
         <li><a href="images/bonsai-gallery-1.png"  title="Ficus Bonsai" id="first_link">
-          <img src="thumbnails/bonsai-gallery-1.png" width =60px height=40px alt=""></a></li>
+          <img src="images/bonsai-gallery-1.png" width =60px height=40px alt=""></a></li>
         <li><a href="images/bonsai-gallery-2.png" title="Japanese Maple Trees">
-          <img src="thumbnails/bonsai-gallery-2.png" width =60px height=40px alt=""></a></li>
+          <img src="images/bonsai-gallery-2.png" width =60px height=40px alt=""></a></li>
         <li><a href="images/bonsai-gallery-3.png" title="Chinese Elm">
-          <img src="thumbnails/bonsai-gallery-3.png" width =60px height=40px alt=""></a></li>
+          <img src="images/bonsai-gallery-3.png" width =60px height=40px alt=""></a></li>
         <li><a href="images/bonsai-gallery-4.png" title="Satsuki Azalea">
-          <img src="thumbnails/bonsai-gallery-4.png" width =60px height=40px alt=""></a></li>
+          <img src="images/bonsai-gallery-4.png" width =60px height=40px alt=""></a></li>
         <li><a href="images/bonsai-gallery-5.png" title="Birch Bonsai Trees">
-          <img src="thumbnails/bonsai-gallery-5.png" width =60px height=40px alt=""></a></li>
+          <img src="images/bonsai-gallery-5.png" width =60px height=40px alt=""></a></li>
         <li><a href="images/bonsai-gallery-6.png" title="Juniper Bonsai">
-          <img src="thumbnails/bonsai-gallery-6.png" width =60px height=40px alt=""></a></li>
+          <img src="images/bonsai-gallery-6.png" width =60px height=40px alt=""></a></li>
           <li><a href="images/bonsai-gallery-7.png" title="Pine Bonsai Trees">
-          <img src="thumbnails/bonsai-gallery-7.png" width =60px height=40px alt=""></a></li>
+          <img src="images/bonsai-gallery-7.png" width =60px height=40px alt=""></a></li>
     </ul>
     <h2 id="caption">Different Types Of Bonsai</h2>         
     <p><img src="images/image1.jpg" width =500px height=300px alt="" id="image"></p>
