--- a/gallery.html
+++ b/gallery.html
@@ -76,7 +76,7 @@
           <img src="images/bonsai-gallery-7.png" width =60px height=40px alt=""></a></li>
     </ul>
     <h2 id="caption">Different Types Of Bonsai</h2>         
-    <p><img src="images/image1.jpg" width =500px height=300px alt="" id="image"></p>
+    <p><img src="images/bonsai-gallery-1.png" width =500px height=300px alt="" id="image"></p>
 </section>	
    
 <!-- top button -->
