--- a/gallery.html
+++ b/gallery.html
@@ -57,6 +57,7 @@
       </div>
 </nav>
 
+<div class="stripe">
 <section id="gallery">
   <h1>Gallery</h1>
     <ul id="image_list">
@@ -78,7 +79,7 @@
     <h2 id="caption">Different Types Of Bonsai</h2>         
     <p><img src="images/bonsai-gallery-1.png" width =500px height=300px alt="" id="image"></p>
 </section>	
-   
+</div>
 <!-- top button -->
 <button onclick="topFunction()" id="top" title="Go to top">Top</button>
 
