--- a/gallery.html
+++ b/gallery.html
@@ -58,6 +58,7 @@
 </nav>
 
 <div class="stripe">
+<div class="content_container">
 <section id="gallery">
   <h1>Gallery</h1>
     <ul id="image_list">
@@ -79,6 +80,7 @@
     <h2 id="caption">Different Types Of Bonsai</h2>         
     <p><img src="images/bonsai-gallery-1.png" width =500px height=300px alt="" id="image"></p>
 </section>	
+</div>
 </div>
 <!-- top button -->
 <button onclick="topFunction()" id="top" title="Go to top">Top</button>
