--- a/gallery.html
+++ b/gallery.html
@@ -57,10 +57,16 @@
       </div>
 </nav>
 
+<div class="stripe introduction">
+  <div class="content_container">
+  <h1><b>Gallery</b></h1><br>
+  <h2>Enjoy the beauty of different types of Bonsai!</h2>
+</div>
+</div>
+
 <div class="stripe">
 <div class="content_container">
-<section id="gallery">
-  <h1>Gallery</h1>
+<section id="gallery" margin-top="10vh" margin-right="auto">
     <ul id="image_list">
         <li><a href="images/bonsai-gallery-1.png"  title="Ficus Bonsai" id="first_link">
           <img src="images/bonsai-gallery-1.png" width =60px height=40px alt=""></a></li>
