--- a/calculator.html
+++ b/calculator.html
@@ -27,21 +27,24 @@
     if (unit == 1) { 
       if (stem == 1){
         let circumference = diameter/3.141592;
-        result = circumference * growth_factor;}
+        result = circumference * growth_factor;
+        document.getElementById("total").value = "The estimated age is " + result + " years old";}
       else {
         result = diameter * growth_factor;
+        document.getElementById("total").value = "The estimated age is " + result + " years old";
       }
     }
     else {
       var new_diameter = diameter * 2.54; 
       if (stem == 1){
         let circumference = new_diameter/3.141592;
-        result = circumference * growth_factor;}
+        result = circumference * growth_factor;
+        document.getElementById("total").value = "The estimated age is " + result + " years old";}
       else {
         result = new_diameter * growth_factor;
+        document.getElementById("total").value = "The estimated age is " + result + " years old";
       }
     }
-        document.getElementById("total").value = "The estimated age is " + result + " years old";
         }
     window.onload = function () {
       document.getElementById("calculate").onclick = calculateDbh;
