--- a/calculator.html
+++ b/calculator.html
@@ -22,7 +22,7 @@
     var diameter = parseInt(document.getElementById("circumference").value);
     var growth_factor = parseFloat(document.getElementById("type").value);
     let stem = parseInt(document.getElementById("stem").value);
-    let inch = parseInt(document.getElementById("inch").value);
+    let unit = parseInt(document.getElementById("unit").value);
     let result; 
     if (unit == "1") { 
       if (stem == "1"){
