--- a/calculator.html
+++ b/calculator.html
@@ -35,7 +35,7 @@
       }
     }
     else {
-      diameter = diameter * 2.54; 
+      diameter = diameter/2.54; 
       if (stem == "1"){
         diameter = diameter/3.141592;
         result = diameter * growth_factor;
