--- a/calculator.html
+++ b/calculator.html
@@ -28,10 +28,10 @@
       if (stem == "1"){
         diameter = diameter/3.141592;
         result = diameter * growth_factor;
-        document.getElementById("total").value = "The estimated age is " + result + " years old";}
+        document.getElementById("total").value = "The estimated age is " + result.toFixed(2) + " years old";}
       else {
         result = diameter * growth_factor;
-        document.getElementById("total").value = "The estimated age is " + result + " years old";
+        document.getElementById("total").value = "The estimated age is " + result.toFixed(2) + " years old";
       }
     }
     else {
@@ -39,10 +39,10 @@
       if (stem == "1"){
         diameter = diameter/3.141592;
         result = diameter * growth_factor;
-        document.getElementById("total").value = "The estimated age is " + result + " years old";}
+        document.getElementById("total").value = "The estimated age is " + result.toFixed(2) + " years old";}
       else {
         result = diameter * growth_factor;
-        document.getElementById("total").value = "The estimated age is " + result + " years old";
+        document.getElementById("total").value = "The estimated age is " + result.toFixed(2) + " years old";
       }
     }
         }
