--- a/gallery.html
+++ b/gallery.html
@@ -60,7 +60,7 @@
 <div class="stripe introduction">
   <div class="content_container">
   <h1><b>Gallery</b></h1><br>
-  <h2>Enjoy the beauty of different types of Bonsai!</h2>
+  <h2>Enjoy the beauty of Bonsai! We have curated a gallery with different types of Bonsai and included their names. o</h2>
 </div>
 </div>
 
@@ -88,6 +88,7 @@
 </section>	
 </div>
 </div>
+
 <!-- top button -->
 <button onclick="topFunction()" id="top" title="Go to top">Top</button>
 
