--- a/information.html
+++ b/information.html
@@ -16,6 +16,11 @@
   <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="style-information.css">
   <script src="java.js" defer ></script>
+  <!-- jQuery 1.8 or later, 33 KB -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <!-- Fotorama from CDNJS, 19 KB -->
+  <link  href="https://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css" rel="stylesheet">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.js"></script>
   <meta name="theme-color" content="#fafafa">
 </head>
 
@@ -134,6 +139,26 @@
 </div>
 </div>
 
+<!-- New slideshow-->
+<div class ="slideshow">
+  <h2>More bonsai photos to inspire you:</h2>
+  <div class="fotorama"
+    data-width="100%"
+    data-height="100%"
+    data-nav="thumbs"
+    data-transition="crossfade"
+    data-autoplay="2000"
+    data-navposition="top"
+    data-loop="true"
+    data-click="true"
+    data-swipe="true">
+    <a href="images/1.jpeg"><img src="images/1.jpeg" width="150" height="200"></a>
+    <a href="images/2.jpeg"><img src="images/2.jpeg" width="150" height="200"></a>
+    <a href="images/3.jpeg"><img src="images/3.jpeg" width="150" height="200"></a>
+    <a href="images/4.jpeg"><img src="images/4.jpeg" width="150" height="200"></a>
+    <a href="images/5.jpeg"><img src="images/5.jpeg" width="150" height="200"></a>
+  </div>
+</div>
 <!-- Resources section-->
 <div class="resource">
   <div class="content_container">
