--- a/gallery.html
+++ b/gallery.html
@@ -59,8 +59,8 @@
 
 <div class="stripe introduction">
   <div class="content_container">
-  <h1><b>Gallery</b></h1><br>
-  <h2>Enjoy the beauty of Bonsai! We have curated a gallery with different types of Bonsai and included their names. o</h2>
+  <h1>Gallery</h1><br>
+  <h2>Enjoy the beauty of Bonsai! We have curated a gallery with different types of Bonsai and included their names.</h2>
 </div>
 </div>
 
