--- a/contactus.html
+++ b/contactus.html
@@ -40,7 +40,7 @@
 
   <div class="stripe introduction">
     <div class="content_container">
-    <h1><b>Contact Us</b></h1><br>
+    <h1>Contact Us</h1><br>
     <h2>Fill the form to add a new bonsai tree to our website</h2>
   </div>
   </div>
