--- a/gallery.html
+++ b/gallery.html
@@ -83,7 +83,7 @@
           <li><a href="images/bonsai-gallery-7.png" title="Pine Bonsai Trees">
           <img src="images/bonsai-gallery-7.png" width =60px height=40px alt=""></a></li>
     </ul>
-    <h2 id="caption">Different Types Of Bonsai</h2>         
+    <h2 id="caption">Types Of Bonsai</h2>         
     <p><img src="images/bonsai-gallery-1.png" width =500px height=300px alt="" id="image"></p>
 </section>	
 </div>
